api/swim_form/src/tests/derive/form/newtype_multi_field_struct.stderr
error: Cannot apply `newtype` attribute to a struct with multiple fields
 --> $DIR/src/tests/derive/form/newtype_multi_field_struct.rs:4:14
  |
4 |     #[derive(Form)]
  |              ^^^^
